--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       referrerpolicy="no-referrer"
       />
     <!--custom css file  -->
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body>
     <header class="header" id="header">
@@ -132,7 +132,7 @@
           <div class="row">
             <div class="col-4">
               <div class="cart-container">
-                <img src="/assets/images/about-1.png" alt="" />
+                <img src="assets/images/about-1.png" alt="" />
                 <div class="cart-title">
                   <p>クリエイター特化</p>
                 </div>
@@ -147,7 +147,7 @@
             </div>
             <div class="col-4">
               <div class="cart-container">
-                <img src="/assets/images/about-2.png" alt="" />
+                <img src="assets/images/about-2.png" alt="" />
                 <div class="cart-title">
                   <p>様々な企業からのスカウト</p>
                 </div>
@@ -160,7 +160,7 @@
             </div>
             <div class="col-4">
               <div class="cart-container">
-                <img src="/assets/images/about-3.png" alt="" />
+                <img src="assets/images/about-3.png" alt="" />
                 <div class="cart-title">
                   <p>非公開求人多数</p>
                 </div>
@@ -352,7 +352,7 @@
         <div class="voice-container">
           
           <div class="member-img">
-            <img src="/assets/images/member1.png" alt="">
+            <img src="assets/images/member1.png" alt="">
             <div class="member-img__des">
               <p>30代 <br> アートディレクター</p>
             </div>
@@ -362,7 +362,7 @@
           </div>
 
           <div class="member-img">
-            <img src="/assets/images/member2.png" alt="">
+            <img src="assets/images/member2.png" alt="">
             <div class="member-img__des">
               <p>30代 男性<br> WEBディレクター</p>
             </div>
@@ -372,7 +372,7 @@
           </div>
 
           <div class="member-img">
-            <img src="/assets/images/member3.png" alt="">
+            <img src="assets/images/member3.png" alt="">
             <div class="member-img__des">
               <p>20代 女性<br>UIデザイナー</p>
             </div>
