--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-image:url('assets/images/bg1.jpg');">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -454,8 +454,6 @@
 
       </div>
       <p class="copy-right"> &copy; Coryright</p>
-
-
 
     </footer>
 
