--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <div class="sidebar-btn">
         <button type="button">
-          クリエイターズスカウトバンクの ご登録はこちら（無料）
+          <a href="#">クリエイターズスカウトバンクの ご登録はこちら（無料）</a>
         </button>
       </div>
 
